--- a/style.css
+++ b/style.css
@@ -1,52 +1,62 @@
-.fun{
-  border: px solid black;
-  font-size:20px;
+html{
+  background-color:#241e1e;
 }
-
-p {
-  font-size: 20px;
-  text-align: center;
-}
-
-.p1{
-  border: 5px solid turquoise;
-  position: fixed;
-  margin-top: 40px;
-  margin-left: 30px;
-  font-size:30px;
-}
-.p2{
-  border:5px solid turquoise;
-  position:fixed;
-  margin-top:40px;
-  margin-left:150px;
-  font-size:30px;
-}
-.p3{
-  border:5px solid turquoise;
-  position:fixed;
-  margin-top:40px;
-  margin-left:300px;
-  font-size:30px;
-}
-.Links{
- position:fixed;
-  margin-top:40px;
-  margin-left:30px;
- 
-}
-.Alvin{
-  position:fixed;
-  margin-top:40px;
-  margin-left:150px; 
-}
-.Simon{
-  position:fixed;
-  margin-top:40px;
-   margin-left:300px;
-}
-
-
 body{
- background:lightpink;
+  width:600px;
+  margin: 0 auto;
+  margin-top: 25px;
+  padding: 0 20px 20px 20px;
+  border:5px solid black;
+  background-color:#734d4d;
+}
+
+.First_P{
+  margin-top: 150px;
+}
+
+
+
+h1{
+  margin:0;
+  padding:20px 0;
+  color:#00539F;
+  text-shadow:3px 3px 1px black;
+}
+img{
+  display:block;
+  margin:0 auto;
+}
+
+.Hello{
+  border: 5px solid black;
+  position: relative;
+  top: 20px;
+  left: -10px;
+  width: 100px;
+  height: 20px;
+  padding: 20px;
+  text-align: center;
+  margin: 0 auto;
+  background-color:#e8e8e8;
+  
+}
+
+#eye{
+  margin:0px 550px;
+   width:50px;
+}
+#eye2{
+  margin:0px 300px;
+  width:50px;
+    
+}
+
+#eye3{
+  margin:0px 50px;
+  width:50px
+}
+
+#blood{
+  margin:0px 330px;
+  width:300px;
 }
