--- a/style.css
+++ b/style.css
@@ -43,20 +43,20 @@ img{
 
 #eye{
   margin:0px 550px;
-   width:fit-content;
-  height:fit-content;
+   width:50px;
+  height:50px;
 }
 #eye2{
   margin:0px 300px;
-  width:fit-content;
-  height:fit-content;
+  width:50px;
+  height:50px;
     
 }
 
 #eye3{
   margin:0px 50px;
-  width:fit-content;
-  height:fit-content;
+  width:50px;
+  height:50px;
 }
 
 #blood{
