--- a/page2.css
+++ b/page2.css
@@ -39,8 +39,11 @@ img{
 }
 
 #lantern{
-  width:300px;
+  width:100px;
+  height:100px;
 }
 
 #smiel{
-  width:300px;
+  width:100px;
+  height:100px;
+}
