--- a/page2.css
+++ b/page2.css
@@ -38,12 +38,9 @@ img{
   margin:0 auto;
 }
 
-#lantern{
-  width:100px;
-  height:100px;
-}
+#
 
 #smiel{
-  width:100px;
-  height:100px;
+  width:300px;
+  margin:-100
 }
